# advent-2025-python

./: README.md  pyproject.toml
src/advent_2025_python/: __init__.py
src/days/: day-template.py  day0.py  day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/util/: input_reader.py  lists.py  profiler.py
test/: d10_test.py  d1_test.py  d2_test.py  d3_test.py  d4_test.py  d5_test.py  d7_test.py  d8_test.py  d9_test.py
