[project]
name = "advent-2025-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joel Thibault", email = "thibault@broad.dev" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
help = "advent_2025_python:main"
d0 = "days:day0.main"
d0p1 = "days:day0.part1"
d0p2 = "days:day0.part2"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
