[project]
name = "advent-2025-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
help = "advent_2025_python:main"
d0 = "days:day0.main"
d0p1 = "days:day0.part1"
d0p2 = "days:day0.part2"
d1 = "days:day1.main"
d1p1 = "days:day1.part1"
d2 = "days:day2.main"
d2p1 = "days:day2.part1"
d2p2 = "days:day2.part2"
d3 = "days:day3.main"
d3p1 = "days:day3.part1"
d4 = "days:day4.main"
d4p1 = "days:day4.part1"
d4p2 = "days:day4.part2"
d5 = "days:day5.main"
d5p1 = "days:day5.part1"
d6 = "days:day6.main"
d6p1 = "days:day6.part1"
d6p2 = "days:day6.part2"
d7 = "days:day7.main"
d7p1 = "days:day7.part1"
d7p2 = "days:day7.part2"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
